changing Annotation.linkbackUrl to type URI, also changing API method names